--- a/04_dbcp/src/main/webapp/WEB-INF/web.xml
+++ b/04_dbcp/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,13 @@
     <servlet-name>BoardController</servlet-name>
     <url-pattern>*.brd</url-pattern>
   </servlet-mapping>
+  <filter>
+    <display-name>BoardFiter</display-name>
+    <filter-name>BoardFiter</filter-name>
+    <filter-class>com.gdu.prj.filter.BoardFiter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>BoardFiter</filter-name>
+    <url-pattern>*.brd</url-pattern>
+  </filter-mapping>
 </web-app>
